# audacity-project-tools

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: cmake.yml
3party/sqlite3/: CMakeLists.txt
src/: AudacityDatabase.cpp  AudacityDatabase.h  BinaryXMLConverter.cpp  BinaryXMLConverter.h  Buffer.cpp  Buffer.h  ProjectBlobReader.cpp  ProjectBlobReader.h  ProjectModel.cpp  ProjectModel.h  SampleFormat.cpp  SampleFormat.h  WaveFile.cpp  WaveFile.h  XMLHandler.h  main.cpp
